--- a/banmeshi/banmeshi/Storyboards/Menu.storyboard
+++ b/banmeshi/banmeshi/Storyboards/Menu.storyboard
@@ -42,9 +42,15 @@
                                 </constraints>
                                 <color key="tintColor" systemColor="labelColor"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="登録">
+                                <buttonConfiguration key="configuration" style="plain" title="登录">
+                                    <fontDescription key="titleFontDescription" type="system" weight="heavy" pointSize="25"/>
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="tapRegisterBtn:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="4dB-7Z-fQz"/>
                                 </connections>
@@ -97,6 +103,21 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s5E-6N-3x3">
+                                <rect key="frame" x="344" y="254" width="60" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="UKn-Kl-HCO"/>
+                                    <constraint firstAttribute="height" constant="30" id="fd0-r4-6wh"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="编辑">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="17"/>
+                                    <color key="baseForegroundColor" systemColor="labelColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="tapEditButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="NvE-L7-quV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -104,6 +125,7 @@
                             <constraint firstItem="fmn-Ra-Av7" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="4C1-1T-XlF"/>
                             <constraint firstItem="9YD-PL-d5g" firstAttribute="leading" secondItem="bCI-5T-pDI" secondAttribute="trailing" constant="20" id="6Ai-TD-ugZ"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="9YD-PL-d5g" secondAttribute="trailing" constant="20" id="AHO-y1-kJe"/>
+                            <constraint firstItem="vwb-pJ-v46" firstAttribute="top" secondItem="s5E-6N-3x3" secondAttribute="bottom" id="B0p-uw-tFl"/>
                             <constraint firstItem="vwb-pJ-v46" firstAttribute="top" secondItem="ryY-vg-fx0" secondAttribute="bottom" constant="100" id="Dx8-cv-SLS"/>
                             <constraint firstItem="bCI-5T-pDI" firstAttribute="top" secondItem="fmn-Ra-Av7" secondAttribute="bottom" constant="10" id="GSe-2A-yA5"/>
                             <constraint firstItem="fmn-Ra-Av7" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="JYA-My-8oI"/>
@@ -116,10 +138,12 @@
                             <constraint firstItem="bCI-5T-pDI" firstAttribute="centerX" secondItem="fmn-Ra-Av7" secondAttribute="centerX" id="ahJ-i9-zpB"/>
                             <constraint firstItem="hSR-M8-Run" firstAttribute="centerY" secondItem="fmn-Ra-Av7" secondAttribute="centerY" id="l7f-OV-Elo"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="vwb-pJ-v46" secondAttribute="bottom" id="o9u-sd-92D"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="s5E-6N-3x3" secondAttribute="trailing" constant="10" id="p8M-Ml-yUq"/>
                             <constraint firstItem="9YD-PL-d5g" firstAttribute="centerY" secondItem="bCI-5T-pDI" secondAttribute="centerY" id="qZZ-mc-tEJ"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="editButton" destination="s5E-6N-3x3" id="nqS-Ie-yYT"/>
                         <outlet property="menuTableView" destination="vwb-pJ-v46" id="5Gb-4t-1i3"/>
                         <outlet property="menuTextField" destination="bCI-5T-pDI" id="2xv-oy-AjS"/>
                         <outlet property="pointTextField" destination="9YD-PL-d5g" id="Q6a-0f-fzq"/>
