--- a/banmeshi/banmeshi/Storyboards/Menu.storyboard
+++ b/banmeshi/banmeshi/Storyboards/Menu.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bCI-5T-pDI">
-                                <rect key="frame" x="20" y="114" width="294" height="30"/>
+                                <rect key="frame" x="20" y="158" width="294" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="f49-FV-NMe"/>
                                 </constraints>
@@ -25,7 +25,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="菜名" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fmn-Ra-Av7">
-                                <rect key="frame" x="30" y="74" width="274" height="30"/>
+                                <rect key="frame" x="30" y="118" width="274" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="1gU-0B-by5"/>
                                 </constraints>
@@ -34,7 +34,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ryY-vg-fx0">
-                                <rect key="frame" x="147" y="154" width="120" height="30"/>
+                                <rect key="frame" x="147" y="198" width="120" height="30"/>
                                 <color key="backgroundColor" red="0.53247921480000004" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="2pk-4N-4kD"/>
@@ -56,7 +56,7 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="vwb-pJ-v46">
-                                <rect key="frame" x="0.0" y="284" width="414" height="578"/>
+                                <rect key="frame" x="0.0" y="328" width="414" height="534"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="L9r-hq-V6U" detailTextLabel="L3c-T3-2N6" style="IBUITableViewCellStyleValue1" id="lEm-Wh-Wxi">
@@ -90,7 +90,7 @@
                                 </connections>
                             </tableView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9YD-PL-d5g">
-                                <rect key="frame" x="334" y="112" width="60" height="34"/>
+                                <rect key="frame" x="334" y="156" width="60" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="Huc-T0-Pis"/>
                                 </constraints>
@@ -98,13 +98,13 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分数" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hSR-M8-Run">
-                                <rect key="frame" x="345.5" y="78.5" width="37" height="21"/>
+                                <rect key="frame" x="345.5" y="122.5" width="37" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s5E-6N-3x3">
-                                <rect key="frame" x="344" y="254" width="60" height="30"/>
+                                <rect key="frame" x="344" y="298" width="60" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="UKn-Kl-HCO"/>
                                     <constraint firstAttribute="height" constant="30" id="fd0-r4-6wh"/>
@@ -118,6 +118,20 @@
                                     <action selector="tapEditButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="NvE-L7-quV"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3FO-Wp-nXh">
+                                <rect key="frame" x="0.0" y="327" width="414" height="1"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="Vg5-HW-zOS"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Od8-9o-UoC">
+                                <rect key="frame" x="0.0" y="88" width="414" height="1"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="ZZA-vD-Uof"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -126,22 +140,29 @@
                             <constraint firstItem="9YD-PL-d5g" firstAttribute="leading" secondItem="bCI-5T-pDI" secondAttribute="trailing" constant="20" id="6Ai-TD-ugZ"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="9YD-PL-d5g" secondAttribute="trailing" constant="20" id="AHO-y1-kJe"/>
                             <constraint firstItem="vwb-pJ-v46" firstAttribute="top" secondItem="s5E-6N-3x3" secondAttribute="bottom" id="B0p-uw-tFl"/>
+                            <constraint firstItem="vwb-pJ-v46" firstAttribute="top" secondItem="3FO-Wp-nXh" secondAttribute="bottom" id="BUG-bO-JIc"/>
                             <constraint firstItem="vwb-pJ-v46" firstAttribute="top" secondItem="ryY-vg-fx0" secondAttribute="bottom" constant="100" id="Dx8-cv-SLS"/>
                             <constraint firstItem="bCI-5T-pDI" firstAttribute="top" secondItem="fmn-Ra-Av7" secondAttribute="bottom" constant="10" id="GSe-2A-yA5"/>
                             <constraint firstItem="fmn-Ra-Av7" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="JYA-My-8oI"/>
+                            <constraint firstItem="Od8-9o-UoC" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="JhM-pq-9OE"/>
+                            <constraint firstItem="3FO-Wp-nXh" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="LZE-sA-0Dm"/>
                             <constraint firstItem="bCI-5T-pDI" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="OcV-aX-wGH"/>
                             <constraint firstItem="ryY-vg-fx0" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Srn-7k-XAU"/>
                             <constraint firstItem="vwb-pJ-v46" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="W1w-nl-ug0"/>
                             <constraint firstItem="9YD-PL-d5g" firstAttribute="centerX" secondItem="hSR-M8-Run" secondAttribute="centerX" id="XLg-Of-nLi"/>
+                            <constraint firstItem="Od8-9o-UoC" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="XZk-Of-CAR"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="vwb-pJ-v46" secondAttribute="trailing" id="Zlw-CI-qa3"/>
                             <constraint firstItem="ryY-vg-fx0" firstAttribute="top" secondItem="bCI-5T-pDI" secondAttribute="bottom" constant="10" id="aTf-cy-Tib"/>
                             <constraint firstItem="bCI-5T-pDI" firstAttribute="centerX" secondItem="fmn-Ra-Av7" secondAttribute="centerX" id="ahJ-i9-zpB"/>
+                            <constraint firstItem="Od8-9o-UoC" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="bKg-g7-bnu"/>
+                            <constraint firstItem="3FO-Wp-nXh" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="fXz-JP-8s7"/>
                             <constraint firstItem="hSR-M8-Run" firstAttribute="centerY" secondItem="fmn-Ra-Av7" secondAttribute="centerY" id="l7f-OV-Elo"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="vwb-pJ-v46" secondAttribute="bottom" id="o9u-sd-92D"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="s5E-6N-3x3" secondAttribute="trailing" constant="10" id="p8M-Ml-yUq"/>
                             <constraint firstItem="9YD-PL-d5g" firstAttribute="centerY" secondItem="bCI-5T-pDI" secondAttribute="centerY" id="qZZ-mc-tEJ"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="nd0-ar-ul5"/>
                     <connections>
                         <outlet property="editButton" destination="s5E-6N-3x3" id="nqS-Ie-yYT"/>
                         <outlet property="menuTableView" destination="vwb-pJ-v46" id="5Gb-4t-1i3"/>
@@ -152,6 +173,24 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1034.7826086956522" y="73.660714285714278"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Mlg-Pl-UeB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9Qq-X6-1bx" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VCc-wG-xON">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="oFo-HA-Ghx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GkF-4T-wJi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="124.6376811594203" y="73.660714285714278"/>
         </scene>
     </scenes>
@@ -161,6 +200,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
