--- a/banmeshi/banmeshi/ViewControllers/MenuDetail/AddPhotoViewController.xib
+++ b/banmeshi/banmeshi/ViewControllers/MenuDetail/AddPhotoViewController.xib
@@ -22,7 +22,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bblive_2233_loading_error_128x94_" translatesAutoresizingMaskIntoConstraints="NO" id="Q3z-C8-FGL">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loading_1_280x158_" translatesAutoresizingMaskIntoConstraints="NO" id="Q3z-C8-FGL">
                     <rect key="frame" x="0.0" y="44" width="414" height="300"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="300" id="YD7-Ub-4st"/>
@@ -148,7 +148,7 @@
         </view>
     </objects>
     <resources>
-        <image name="bblive_2233_loading_error_128x94_" width="128" height="94"/>
+        <image name="loading_1_280x158_" width="280" height="158"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
