--- a/banmeshi/banmeshi/ViewControllers/MenuDetail/MenuDetailViewController.xib
+++ b/banmeshi/banmeshi/ViewControllers/MenuDetail/MenuDetailViewController.xib
@@ -44,10 +44,11 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HLg-ip-WNG">
                             <rect key="frame" x="20" y="10" width="334" height="0.0"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" red="0.94117647059999998" green="0.48627450979999998" blue="0.60392156860000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
+                    <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="HLg-ip-WNG" secondAttribute="trailing" constant="20" id="ejV-Uw-UdH"/>
                         <constraint firstItem="HLg-ip-WNG" firstAttribute="leading" secondItem="ZIb-Re-4hy" secondAttribute="leading" constant="20" id="kAC-dp-qUu"/>
@@ -84,7 +85,7 @@
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9K8-Sb-cRl">
                     <rect key="frame" x="0.0" y="520" width="414" height="342"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Orz-Hd-Fp2">
                     <rect key="frame" x="0.0" y="519" width="414" height="1"/>
@@ -117,7 +118,7 @@
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Jdl-lZ-Sg8" secondAttribute="trailing" id="5EW-g9-W0T"/>
                 <constraint firstItem="Oqg-c5-0Aj" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="7bN-E3-1PQ"/>
@@ -151,9 +152,6 @@
         <image name="empty_coupon" width="242" height="188"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemTealColor">
             <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
